--- a/TwitterMessangerForAndroid/TwitterMessangerForAndroid.csproj
+++ b/TwitterMessangerForAndroid/TwitterMessangerForAndroid.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="Mono.Android.Support.v4" />
     <Reference Include="Mono.Android.Export" />
+    <Reference Include="RestSharp.MonoDroid">
+      <HintPath>lib\RestSharp.MonoDroid.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
