--- a/TwitterMessangerForAndroid/Properties/AndroidManifest.xml
+++ b/TwitterMessangerForAndroid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="TwitterMessangerForAndroid.TwitterMessangerForAndroid">
 	<uses-sdk android:minSdkVersion="7" />
-	<application android:label="TwitterMessangerForAndroid">
+	<application android:icon="@drawable/icon_small" android:label="HashBot">
 	</application>
 </manifest>
